force-app/main/default/objects/leaseworks__Aircraft_Proposal__c/fields/Pre_Delivery_KYC_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Pre_Delivery_KYC_Approval_Status__c</fullName>
    <label>Pre Delivery KYC Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Not Approved</fullName>
            </value>
            <value>
                <fullName>Waived</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>