force-app/main/default/objects/leaseworks__Aircraft_Proposal__c/fields/pro_Active__c.field-meta.xml
<CustomField>
    <fullName>pro_Active__c</fullName>
    <description>Displays a green circle when the AiD is active. Displays a red circle when the AiD is inactive.</description>
    <formula>IF(
leaseworks__Inactive_AT__c = TRUE,
      IMAGE(&quot;/resource/1747144606000/red_circle?&quot;, &quot;Inactive&quot;, 19, 19),
      IMAGE(&quot;/resource/1730193892000/green_circle?&quot;, &quot;Active&quot;, 19, 19)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active</label>
    <type>Text</type>
</CustomField>