force-app/main/default/objects/leaseworks__Aircraft_Proposal__c/fields/pro_ADM_Approval_Required__c.field-meta.xml
<CustomField>
    <fullName>pro_ADM_Approval_Required__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Field is checked as default. If field gets unchecked, the ADM Approval formula field returns NA, otherwise it returns the ADM Approval status.</description>
    <label>ADM Approval Required?</label>
    <type>Checkbox</type>
</CustomField>