force-app/main/default/objects/leaseworks__Aircraft_Proposal__c/fields/pro_AiD_Team_Approval__c.field-meta.xml
<CustomField>
    <fullName>pro_AiD_Team_Approval__c</fullName>
    <formula>TEXT(pro_Lease_Documentation_Approval_Count__c) + &#39;/&#39; +  TEXT(pro_Lease_Documentation_Approver_Count__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AiD Team Approval</label>
    <type>Text</type>
</CustomField>