force-app/main/default/objects/leaseworks__Aircraft_Proposal__c/fields/Pro_All_Other_LOI__c.field-meta.xml
<CustomField>
    <fullName>Pro_All_Other_LOI__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>All Other LOI</label>
    <referenceTo>pro_Target__c</referenceTo>
    <relationshipLabel>Assets in Deal (All Other LOI)</relationshipLabel>
    <relationshipName>Assets_in_Deal1</relationshipName>
    <type>Lookup</type>
</CustomField>