force-app/main/default/objects/leaseworks__Aircraft_Proposal__c/fields/pro_Cash_LC_Amount__c.field-meta.xml
<CustomField>
    <fullName>pro_Cash_LC_Amount__c</fullName>
    <label>Cash/LC Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>