force-app/main/default/objects/leaseworks__Aircraft_Proposal__c/fields/pro_Company_Board_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>pro_Company_Board_Approval_Date__c</fullName>
    <label>Company Board Approval Date</label>
    <type>Date</type>
</CustomField>