force-app/main/default/objects/leaseworks__Aircraft_Proposal__c/fields/pro_CSs_List__c.field-meta.xml
<CustomField>
    <fullName>pro_CSs_List__c</fullName>
    <label>CSs List</label>
    <type>Url</type>
</CustomField>