force-app/main/default/objects/leaseworks__Aircraft_Proposal__c/fields/pro_CSs_List_Attached__c.field-meta.xml
<CustomField>
    <fullName>pro_CSs_List_Attached__c</fullName>
    <label>CSs List Attached?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>