force-app/main/default/objects/leaseworks__Aircraft_Proposal__c/fields/pro_Date_Of_Receipt_IDERA__c.field-meta.xml
<CustomField>
    <fullName>pro_Date_Of_Receipt_IDERA__c</fullName>
    <label>Date Of Receipt (IDERA)</label>
    <type>Date</type>
</CustomField>