force-app/main/default/objects/leaseworks__Aircraft_Proposal__c/fields/pro_Days_Left_Scheduled_Delivery_Colour__c.field-meta.xml
<CustomField>
    <fullName>pro_Days_Left_Scheduled_Delivery_Colour__c</fullName>
    <formula>IF(
    NOT(ISBLANK(pro_Actual_Delivery_Date__c)),
    IMAGE(&quot;/resource/1727948760000/Green?&quot;, &quot;Green&quot;,20,20),
    IF(
        pro_Days_Left_To_Scheduled_Delivery_Date__c &gt;= 30,
        IMAGE(&quot;/resource/1727948760000/Green?&quot;, &quot;Green&quot;,20,20) &amp; &quot; &quot; &amp; TEXT(ROUND(pro_Days_Left_To_Scheduled_Delivery_Date__c, 0)) &amp; &quot; days remaining&quot;,
        IF(
            AND(pro_Days_Left_To_Scheduled_Delivery_Date__c &gt; 0, pro_Days_Left_To_Scheduled_Delivery_Date__c &lt; 30),
            IMAGE(&quot;/resource/1727950613000/Yellow?&quot;, &quot;Yellow&quot;,20,20) &amp; &quot; &quot; &amp; TEXT(ROUND(pro_Days_Left_To_Scheduled_Delivery_Date__c, 0)) &amp; &quot; days remaining&quot;,
            IF(
                pro_Days_Left_To_Scheduled_Delivery_Date__c &lt;= 0,
                IMAGE(&quot;/resource/1727950641000/Red?&quot;, &quot;Red&quot;,20,20) &amp; &quot; &quot; &amp; TEXT(ROUND(pro_Days_Left_To_Scheduled_Delivery_Date__c, 0)) &amp; &quot; days overdue&quot;,
                &quot;&quot;
            )
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Left To Scheduled Delivery Date</label>
    <type>Text</type>
</CustomField>