force-app/main/default/objects/leaseworks__Aircraft_Proposal__c/fields/pro_Days_Left_To_Expected_BAC_Approval__c.field-meta.xml
<CustomField>
    <fullName>pro_Days_Left_To_Expected_BAC_Approval__c</fullName>
    <formula>pro_Expected_BAC_Approval_Date__c - TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Left To Expected BAC Approval</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>