force-app/main/default/objects/leaseworks__Aircraft_Proposal__c/fields/pro_Delivery_Security_Deposit__c.field-meta.xml
<CustomField>
    <fullName>pro_Delivery_Security_Deposit__c</fullName>
    <label>Delivery Security Deposit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>