force-app/main/default/objects/leaseworks__Aircraft_Proposal__c/fields/pro_Deposit_Date__c.field-meta.xml
<CustomField>
    <fullName>pro_Deposit_Date__c</fullName>
    <label>Deposit Date</label>
    <type>Date</type>
</CustomField>