force-app/main/default/objects/leaseworks__Aircraft_Proposal__c/fields/pro_Exclude_Deal_From_Doc_Tracking__c.field-meta.xml
<CustomField>
    <fullName>pro_Exclude_Deal_From_Doc_Tracking__c</fullName>
    <description>Pulls in the value from the Exclude Deal From Documentation Event checkbox on the Deal</description>
    <formula>leaseworks__Marketing_Activity__r.pro_Exclude_Deal_From_Doc_Tracking__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exclude Deal From Documentation Tracking</label>
    <type>Checkbox</type>
</CustomField>