force-app/main/default/objects/leaseworks__Aircraft_Proposal__c/fields/pro_Expected_BAC_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>pro_Expected_BAC_Approval_Date__c</fullName>
    <label>Expected BAC Approval Date</label>
    <type>Date</type>
</CustomField>