force-app/main/default/objects/leaseworks__Aircraft_Proposal__c/fields/pro_First_Draft_Lease_Date__c.field-meta.xml
<CustomField>
    <fullName>pro_First_Draft_Lease_Date__c</fullName>
    <inlineHelpText>Date initial draft of transaction document first shared with counterparty for review</inlineHelpText>
    <label>Draft to Counterparty</label>
    <type>Date</type>
</CustomField>