force-app/main/default/objects/leaseworks__Aircraft_Proposal__c/fields/pro_Fund__c.field-meta.xml
<CustomField>
    <fullName>pro_Fund__c</fullName>
    <formula>HYPERLINK(&apos;/&apos; &amp; leaseworks__Aircraft__r.leaseworks__Asset_Owner_new__r.Fund_Local__c, leaseworks__Aircraft__r.leaseworks__Asset_Owner_new__r.Fund_Local__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fund</label>
    <type>Text</type>
</CustomField>