force-app/main/default/objects/leaseworks__Aircraft_Proposal__c/fields/pro_Guarantor_Company__c.field-meta.xml
<CustomField>
    <fullName>pro_Guarantor_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Guarantor Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Assets in Deal (Guarantor Company)</relationshipLabel>
    <relationshipName>Assets_in_Deal2</relationshipName>
    <type>Lookup</type>
</CustomField>