force-app/main/default/objects/leaseworks__Aircraft_Proposal__c/fields/pro_KYC_Approved__c.field-meta.xml
<CustomField>
    <fullName>pro_KYC_Approved__c</fullName>
    <description>The value from the KYC Approved field from the related Counterparty For KYC.</description>
    <formula>IF(ISBLANK(TEXT(   pro_Counterparty_For_KYC__r.pro_KYC_Approved__c )),
&quot;Not Populated&quot;,
TEXT(pro_Counterparty_For_KYC__r.pro_KYC_Approved__c))</formula>
    <label>KYC Approved</label>
    <type>Text</type>
</CustomField>