force-app/main/default/objects/leaseworks__Aircraft_Proposal__c/fields/pro_KYC_Final_Approval_Required__c.field-meta.xml
<CustomField>
    <fullName>pro_KYC_Final_Approval_Required__c</fullName>
    <label>KYC Final Approval Required?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>