force-app/main/default/objects/leaseworks__Aircraft_Proposal__c/fields/pro_Local_Counsel_Firm__c.field-meta.xml
<CustomField>
    <fullName>pro_Local_Counsel_Firm__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Local Counsel Firm</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Assets in Deal (Local Counsel Firm)</relationshipLabel>
    <relationshipName>Assets_in_Deal3</relationshipName>
    <type>Lookup</type>
</CustomField>