force-app/main/default/objects/leaseworks__Aircraft_Proposal__c/fields/pro_LSP_Agreements_Actual__c.field-meta.xml
<CustomField>
    <fullName>pro_LSP_Agreements_Actual__c</fullName>
    <description>Gets timestamped by an automation the moment Lease, Sale, Purchase agreements has been completed.</description>
    <label>LSP Agreements - Actual</label>
    <type>Date</type>
</CustomField>