force-app/main/default/objects/leaseworks__Aircraft_Proposal__c/fields/pro_LSP_Agreements_Projected__c.field-meta.xml
<CustomField>
    <fullName>pro_LSP_Agreements_Projected__c</fullName>
    <description>Gets filled in by an automation once engagement with a law firm has been confirmed.</description>
    <label>LSP Agreements - Projected</label>
    <type>Date</type>
</CustomField>