force-app/main/default/objects/leaseworks__Aircraft_Proposal__c/fields/pro_Other_Originals_Location__c.field-meta.xml
<CustomField>
    <fullName>pro_Other_Originals_Location__c</fullName>
    <label>Other Originals Location</label>
    <type>TextArea</type>
</CustomField>