force-app/main/default/objects/leaseworks__Aircraft_Proposal__c/fields/pro_Outside_Counsel_Firm__c.field-meta.xml
<CustomField>
    <fullName>pro_Outside_Counsel_Firm__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Outside Counsel Firm</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Assets in Deal (Outside Counsel Firm)</relationshipLabel>
    <relationshipName>Assets_in_Deal1</relationshipName>
    <type>Lookup</type>
</CustomField>