force-app/main/default/objects/leaseworks__Aircraft_Proposal__c/fields/pro_Post_Closing_Items_Total__c.field-meta.xml
<CustomField>
    <fullName>pro_Post_Closing_Items_Total__c</fullName>
    <description>AB 09/03/2026 - Total count of post-closing checklist items.</description>
    <label>Post-Closing Items Total</label>
    <summaryFilterItems>
        <field>pro_Checklist_Item__c.pro_Phase__c</field>
        <operation>equals</operation>
        <value>Post-Closing</value>
    </summaryFilterItems>
    <summaryForeignKey>pro_Checklist_Item__c.pro_Asset_in_Deal__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>