force-app/main/default/objects/leaseworks__Aircraft_Proposal__c/fields/pro_Pre_Closing_Complete__c.field-meta.xml
<CustomField>
    <fullName>pro_Pre_Closing_Complete__c</fullName>
    <formula>AND(pro_Pre_Closing_Items_Total__c &gt; 0, pro_Pre_Closing_Items_Completed__c &gt;= pro_Pre_Closing_Items_Total__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pre-Closing Complete</label>
    <type>Checkbox</type>
</CustomField>