force-app/main/default/objects/leaseworks__Aircraft_Proposal__c/fields/pro_Target_Contracting_Date_Formula__c.field-meta.xml
<CustomField>
    <fullName>pro_Target_Contracting_Date_Formula__c</fullName>
    <formula>IF(
pro_Target_Contracting_Date_Required__c = False,
&quot;NA&quot;,
IF(
NOT(ISBLANK( pro_Target_Contracting_Date__c )),
TEXT(DAY(pro_Target_Contracting_Date__c )) &amp; &quot; &quot; &amp;
CASE(MONTH(pro_Target_Contracting_Date__c ),
1, &quot;Jan&quot;,
2, &quot;Feb&quot;,
3, &quot;Mar&quot;,
4, &quot;Apr&quot;,
5, &quot;May&quot;,
6, &quot;Jun&quot;,
7, &quot;Jul&quot;,
8, &quot;Aug&quot;,
9, &quot;Sep&quot;,
10, &quot;Oct&quot;,
11, &quot;Nov&quot;,
12, &quot;Dec&quot;,
&quot;&quot;
) &amp; &quot; &quot; &amp;
TEXT(YEAR(pro_Target_Contracting_Date__c )),
&quot;&quot;
)
)</formula>
    <label>Target Contracting Date</label>
    <type>Text</type>
</CustomField>