force-app/main/default/objects/leaseworks__Aircraft_Proposal__c/fields/Type_local__c.field-meta.xml
<CustomField>
    <fullName>Type_local__c</fullName>
    <description>The field was created by Asana task - https://app.asana.com/1/7934919496419/project/1210508839133875/task/1210867455268342?focus=true</description>
    <formula>IF(!ISBLANK(leaseworks__Aircraft__c), TEXT(leaseworks__Aircraft__r.leaseworks__Asset_Type_GP__c) , IF(! ISBLANK( leaseworks__World_Fleet_Aircraft__c ), leaseworks__World_Fleet_Aircraft__r.leaseworks__AircraftType__c, IF(! ISBLANK( leaseworks__Engine__c ) , IF( ISBLANK( TEXT(leaseworks__Engine__r.leaseworks__Engine_Type_GP__c) ) , leaseworks__Engine__r.Model_Type_Local__c , TEXT(leaseworks__Engine__r.leaseworks__Engine_Type_GP__c) ) , IF( ISBLANK(LEFT(
TEXT(leaseworks__Asset_Type__c) ,
FIND(
&quot;-&quot;,
TEXT(leaseworks__Asset_Type__c) ,
1
) - 1
)) , TEXT(leaseworks__Asset_Type__c) , LEFT(
TEXT(leaseworks__Asset_Type__c) ,
FIND(
&quot;-&quot;,
TEXT(leaseworks__Asset_Type__c) ,
1
) - 1
)) ) ) )</formula>
    <label>Type</label>
    <type>Text</type>
</CustomField>