force-app/main/default/objects/leaseworks__Aircraft_Proposal__c/recordTypes/Approval.recordType-meta.xml
<RecordType>
    <fullName>Approval</fullName>
    <active>true</active>
    <label>Approval</label>
</RecordType>