force-app/main/default/objects/leaseworks__Aircraft_Proposal__c/recordTypes/Engine_Exchange.recordType-meta.xml
<RecordType>
    <fullName>Engine_Exchange</fullName>
    <active>true</active>
    <label>Engine Exchange</label>
</RecordType>