force-app/main/default/objects/leaseworks__Aircraft_Proposal__c/recordTypes/Engine_Sale_Novation.recordType-meta.xml
<RecordType>
    <fullName>Engine_Sale_Novation</fullName>
    <active>false</active>
    <label>Engine Sale - Novation</label>
</RecordType>