force-app/main/default/objects/leaseworks__Aircraft_Proposal__c/recordTypes/Engine_Sale_Off_Lease.recordType-meta.xml
<RecordType>
    <fullName>Engine_Sale_Off_Lease</fullName>
    <active>false</active>
    <label>Engine Sale - Off Lease</label>
</RecordType>