force-app/main/default/objects/leaseworks__Aircraft_Proposal__c/recordTypes/Lease_Amendment.recordType-meta.xml
<RecordType>
    <fullName>Lease_Amendment</fullName>
    <active>true</active>
    <label>Lease Amendment</label>
</RecordType>