force-app/main/default/objects/leaseworks__Aircraft_Proposal__c/recordTypes/leaseworks__Aircraft.recordType-meta.xml
<RecordType>
    <fullName>leaseworks__Aircraft</fullName>
    <active>false</active>
    <label>Aircraft</label>
</RecordType>