force-app/main/default/objects/leaseworks__Aircraft_Proposal__c/recordTypes/leaseworks__Engine.recordType-meta.xml
<RecordType>
    <fullName>leaseworks__Engine</fullName>
    <active>false</active>
    <label>Engine</label>
</RecordType>