force-app/main/default/objects/leaseworks__Aircraft_Proposal__c/recordTypes/leaseworks__Engine_Lease.recordType-meta.xml
<RecordType>
    <fullName>leaseworks__Engine_Lease</fullName>
    <active>true</active>
    <label>Engine Lease</label>
</RecordType>