force-app/main/default/objects/leaseworks__Aircraft_Proposal__c/recordTypes/leaseworks__Engine_Lease_Restructuring.recordType-meta.xml
<RecordType>
    <fullName>leaseworks__Engine_Lease_Restructuring</fullName>
    <active>true</active>
    <label>Engine Lease Restructuring</label>
</RecordType>