force-app/main/default/objects/leaseworks__Aircraft_Proposal__c/recordTypes/leaseworks__Engine_Other.recordType-meta.xml
<RecordType>
    <fullName>leaseworks__Engine_Other</fullName>
    <active>false</active>
    <label>Engine (Other)</label>
</RecordType>