force-app/main/default/objects/leaseworks__Aircraft_Proposal__c/recordTypes/leaseworks__Engine_Payment_Deferral_Request.recordType-meta.xml
<RecordType>
    <fullName>leaseworks__Engine_Payment_Deferral_Request</fullName>
    <active>true</active>
    <label>Engine Payment Deferral Request</label>
</RecordType>