force-app/main/default/objects/leaseworks__Aircraft_Proposal__c/recordTypes/leaseworks__Engine_Sale.recordType-meta.xml
<RecordType>
    <fullName>leaseworks__Engine_Sale</fullName>
    <active>true</active>
    <label>Engine Sale</label>
</RecordType>