force-app/main/default/objects/leaseworks__Aircraft_Proposal__c/recordTypes/leaseworks__EOLA_Lease.recordType-meta.xml
<RecordType>
    <fullName>leaseworks__EOLA_Lease</fullName>
    <active>true</active>
    <label>EOLA Lease</label>
</RecordType>