force-app/main/default/objects/leaseworks__Aircraft_Proposal__c/recordTypes/leaseworks__EOLA_Lease_Extension.recordType-meta.xml
<RecordType>
    <fullName>leaseworks__EOLA_Lease_Extension</fullName>
    <active>true</active>
    <label>EOLA Lease Extension</label>
</RecordType>