force-app/main/default/objects/leaseworks__Aircraft_Proposal__c/recordTypes/leaseworks__EOLA_Note.recordType-meta.xml
<RecordType>
    <fullName>leaseworks__EOLA_Note</fullName>
    <active>false</active>
    <label>EOLA Note</label>
</RecordType>