force-app/main/default/objects/leaseworks__Aircraft_Proposal__c/recordTypes/leaseworks__EOLA_Sale.recordType-meta.xml
<RecordType>
    <fullName>leaseworks__EOLA_Sale</fullName>
    <active>true</active>
    <label>EOLA Sale</label>
</RecordType>