force-app/main/default/objects/leaseworks__Aircraft_Proposal__c/recordTypes/leaseworks__EOLA_Sale_AT.recordType-meta.xml
<RecordType>
    <fullName>leaseworks__EOLA_Sale_AT</fullName>
    <active>false</active>
    <label>EOLA Sale-AT</label>
</RecordType>