force-app/main/default/objects/leaseworks__Aircraft_Proposal__c/recordTypes/leaseworks__Lease_Campaign.recordType-meta.xml
<RecordType>
    <fullName>leaseworks__Lease_Campaign</fullName>
    <active>true</active>
    <description>Record type for Lease Campaigns</description>
    <label>Lease Campaign</label>
</RecordType>