force-app/main/default/objects/leaseworks__Aircraft_Proposal__c/recordTypes/leaseworks__Lease_Extension.recordType-meta.xml
<RecordType>
    <fullName>leaseworks__Lease_Extension</fullName>
    <active>true</active>
    <label>Lease Extension</label>
</RecordType>