force-app/main/default/objects/leaseworks__Aircraft_Proposal__c/recordTypes/leaseworks__Lease_Restructuring.recordType-meta.xml
<RecordType>
    <fullName>leaseworks__Lease_Restructuring</fullName>
    <active>true</active>
    <label>Lease Restructuring</label>
</RecordType>