force-app/main/default/objects/leaseworks__Aircraft_Proposal__c/recordTypes/leaseworks__Note.recordType-meta.xml
<RecordType>
    <fullName>leaseworks__Note</fullName>
    <active>false</active>
    <label>Note</label>
</RecordType>