force-app/main/default/objects/leaseworks__Aircraft_Proposal__c/recordTypes/leaseworks__Sale.recordType-meta.xml
<RecordType>
    <fullName>leaseworks__Sale</fullName>
    <active>true</active>
    <label>Sale</label>
</RecordType>