force-app/main/default/objects/leaseworks__Aircraft_Proposal__c/recordTypes/leaseworks__Sale_Aircraft_Trading.recordType-meta.xml
<RecordType>
    <fullName>leaseworks__Sale_Aircraft_Trading</fullName>
    <active>true</active>
    <label>Sale Aircraft Trading</label>
</RecordType>