force-app/main/default/objects/leaseworks__Aircraft_Proposal__c/recordTypes/leaseworks__Sale_Asset_Management.recordType-meta.xml
<RecordType>
    <fullName>leaseworks__Sale_Asset_Management</fullName>
    <active>false</active>
    <label>Sale Asset Management</label>
</RecordType>